# platinumsource

./: Cargo.toml  README.md
.github/workflows/: parity-tests.yml
engine_client/: Cargo.toml
engine_client/src/: client.rs  input.rs  interp.rs  lib.rs  main.rs
engine_server/: Cargo.toml
engine_server/src/: lib.rs  main.rs  server.rs
engine_shared/: Cargo.toml
engine_shared/src/: auth.rs  avatar.rs  bsp.rs  chat.rs  cloud.rs  config.rs  console.rs  dlc.rs  ecs.rs  event.rs  gsi.rs  leaderboard.rs  lib.rs  lobby.rs  matchmaking.rs  math.rs  net.rs  party.rs  physics.rs  render.rs  resources.rs  rich_presence.rs  social.rs  steam_id.rs  test_report.rs  voice.rs  workshop.rs
engine_tests/: Cargo.toml
engine_tests/src/: lib.rs
engine_tests/tests/: client_server.rs  smoke_server.rs
maps/: .gitkeep
test-docs/: parity-tests.md
test-reports/: parity-tests.html  parity-tests.json
