[package]
name = "engine_server"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Server module with fixed-timestep loop and snapshot networking."

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
engine_shared = { path = "../engine_shared" }

[dev-dependencies]
tokio.workspace = true
