[package]
name = "engine_shared"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Shared engine libraries: math, ECS, net primitives, config, events, and abstractions."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitflags = "2"
bytes.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
