[package]
name = "engine_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Integration and smoke tests for the engine crates."

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
engine_shared = { path = "../engine_shared" }
engine_client = { path = "../engine_client" }
engine_server = { path = "../engine_server" }

[[bin]]
name = "parity_runner"
path = "src/bin/parity_runner.rs"
